# synk

./: .gitignore  AGENTS.md  POTENTIAL_USES.md  README.md  ddd.md.save  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
.obsidian/: workspace.json
docs/: 01_tech_stack.md  02_specs.md  03_implementation_plan.md  MERGE_CONCEPTS.md  README.md  moscow.md
docs/05.decision-artifacts/adrs/: 0001-python-pyside6.md  0002-xxhash.md  0003-worker-pattern.md  0004-toml-persistence.md  0005-myers-diff.md  0006-archive-virtual-folder.md  0007-sftp-paramiko.md  0008-module-separation.md  0009-dual-entrypoint.md  0010-three-way-merge.md  0011-color-scheme.md  0012-session-schema.md
docs/05.decision-artifacts/bdrs/: 0001-build-vs-buy.md  0002-target-audience.md  0003-monetization.md  0004-open-source.md  0005-distribution.md  0006-prioritization-philosophy.md  0007-data-privacy-and-telemetry.md  0008-versioning-and-compatibility.md
docs/05.decision-artifacts/moscows/: 0001-core-feature-build-sequence.md
docs/adr/: 000-index.md  001-python-pyside6.md  002-xxhash.md  003-worker-pattern.md  004-toml-persistence.md  005-myers-diff.md  006-archive-virtual-folder.md  007-sftp-paramiko.md  008-module-separation.md  009-dual-entrypoint.md  010-three-way-merge.md  011-color-scheme.md  012-session-schema.md
docs/bdr/: 000-index.md  001-build-vs-buy.md  002-target-audience.md  003-monetization.md  004-open-source.md  005-distribution.md  006-prioritization-philosophy.md
src/: cli.py
src/core/: archive.py  hasher.py  merge.py  remote.py  worker.py
src/ui/: diff_dialog.py  file_pane.py  main_window.py  merge_dialog.py  settings_dialog.py  sftp_connect_dialog.py
src/utils/: config.py  session.py
tests/: test_archive.py  test_cli.py  test_cli_merge.py  test_hasher.py  test_merge.py  test_prototype.py  test_remote.py  test_session.py  test_worker.py
