[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "3it-services-beyondcompare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diff-match-patch>=20241021",
    "paramiko>=3.5.0",
    "pyside6>=6.11.0",
    "tomli-w>=1.2.0",
    "xxhash>=3.6.0",
]

[project.scripts]
synk = "src.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "gui: tests requiring a display (X11/Wayland) — skipped headless",
]
