[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "synk-diff"
version = "0.2.0"
description = "Cross-platform file/folder diff and merge tool with GUI, CLI, archive browsing, and 3-way merge."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diff-match-patch>=20241021",
    "paramiko>=3.5.0",
    "pyside6>=6.11.0",
    "tomli-w>=1.2.0",
    "xxhash>=3.6.0",
]

[project.scripts]
synk = "src.cli:main"

[project.urls]
Homepage = "https://github.com/deepak-pradhan/synk"
Repository = "https://github.com/deepak-pradhan/synk"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "types-paramiko>=3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "gui: tests requiring a display (X11/Wayland) — skipped headless",
]

[tool.ruff]
target-version = "py312"
# Default rule set (Pyflakes `F` + pycodestyle `E`). Kept intentionally minimal;
# expand in a follow-up rather than bulk-fixing here.

[tool.mypy]
python_version = "3.12"
files = ["src"]

# diff-match-patch ships no type stubs and has no types-* package.
[[tool.mypy.overrides]]
module = ["diff_match_patch.*"]
ignore_missing_imports = true
